# almacen-backend

./: .pre-commit-config.yaml  Dockerfile  Makefile  config.py  docker-compose.yml  environment.py  logging_config.py  main.py  pyproject.toml
app/: __init__.py  container.py  create_app.py  db.py
app/controllers/: __init__.py  cart.py  container.py  order.py  product.py
app/middlewares/: admin_auth.py
app/models/: __init__.py  base.py  cart.py  order.py  product.py  product_variation.py  tag.py  tip.py
app/repos/: __init__.py  base.py  cart.py  container.py  entity_tag.py  order.py  product.py  product_variation.py  tag.py  tip.py
app/services/: __init__.py  cloud_storage.py  container.py
app_settings/: __init__.py  base_settings.py  google.py  gunicorn.py  log.py  sqlalchemy.py  test_settings.py
flyio/: almacen.dockerfile  fly.toml  postgres-fly.toml  postgres.dockerfile  setup-postgres.sh
migrations/: env.py
migrations/versions/: 20260110_172220_473c407d4b66_initial_migration.py  20260110_204240_e20738e259f9_add_product_translation.py  20260110_232318_ef3f2b1aed6f_add_product_variation.py  20260110_235000_3fe57586e84a_add_order_to_products.py  20260111_120000_add_label_to_orders.py  20260111_140000_add_product_type.py  20260119_120000_add_tags.py  20260123_120000_add_tips.py  20260124_120000_add_tip_type_and_image.py  20260124_130000_migrate_product_tags_to_entity_tags.py  20260124_140000_f6a7b8c9d0e2_add_tag_category.py  20260126_120000_g7h8i9j0k1l2_add_is_filterable_to_tags.py  20260126_130000_h8i9j0k1l2m3_make_tip_translation_title_optional.py
(+23 files in other folders)
